--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <h1>frozen</h1>
+    <h1>2ynthethc</h1>
   </body>
 </html>
