Fixing some issues

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="public/shigure-ui.webp" as="image" />
-    <title>Vite + React + TS</title>
+    <link rel="preload" href="/public/shigure-ui.webp" as="image" />
+    <title>frozen</title>
   </head>
   <body>
     <div id="root"></div>
