--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>frozen</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="test"><h1>
+        2ynthetc
+      </h1></div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
-    <h1>
-      2ynthetc
-    </h1>
+    
   </body>
 </html>
