--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <div id="root">
-      <div id="test"><h1>
+      <div id="test">
+        <h1>
         2ynthetc
-      </h1></div>
+        </h1>
+      </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
     
