--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="/shigure-ui.webp" as="image" />
+    <link rel="stylesheet" href="src/index.css" />
     <title>frozen</title>
   </head>
   <body>
@@ -16,6 +17,5 @@
       </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
-    
   </body>
 </html>
